Created an interface, SearchIndex, for text searching which Vocabulary now implements.  Added a LuceneAdaptor implementation as well. Moved SearchIssue from om to util.word as per Jon's suggestion. Making Lucene the default.
Added a velocimacro to handle the true/false checkbox appropriately
and simply for intake.

Some code/specs/templates have been added for a ModuleAttributeEditor,
but this is not functional yet.

Moved some code around in Login, so that duplication of effort is not
necessary.

PR:
Obtained from:
Submitted by:
Reviewed by:

--- a/src/templates/GlobalMacros.vm
+++ b/src/templates/GlobalMacros.vm
@@ -50,6 +50,12 @@
     #end
 #end
 
+#macro ( fieldErrorMsg $field $br)
+    #if ( !$field.isValid() )
+        <font color="red">$field.Message</font>$br
+    #end
+#end
+
 #macro ( actionErrorMsg )
     #if ($data.Message)
         <font color="red">$data.Message</font>
@@ -73,3 +79,11 @@
     </select>
 
 #end      
+
+
+#macro ( booleanCheckbox $booleanField )
+   <input type="checkbox" name="$booleanField.Key" value="true"
+        #if ($booleanField.Value) checked #end>
+   <input type="hidden" name="$booleanField.ValueIfAbsent"
+        value="false">
+#end
